--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ members = [
     "libs/havok_parser",
     "tools/sqpack_extractor",
     "tools/model_viewer_standalone",
-    "web/model_viewer",
-    "web/translation_compare",
-    "web/web_common",
+    "client/model_viewer",
+    "client/translation_compare",
+    "client/common",
     "server",
 ]
 
