--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "name": "ffxiv-tools",
   "version": "0.1.0",
   "scripts": {
-    "build:app": "webpack --config webpack/webpack.config.app.js",
+    "build:app": "webpack --config webpack/webpack.config.app.ts",
     "app": "electron app/dist",
-    "build:dev": "webpack --config webpack/webpack.config.dev.js",
-    "build:prod": "webpack --config webpack/webpack.config.prod.js",
-    "devserver": "webpack-dev-server --open -d --config webpack/webpack.config.dev.js"
+    "build:dev": "webpack --config webpack/webpack.config.dev.ts",
+    "build:prod": "webpack --config webpack/webpack.config.prod.ts",
+    "devserver": "webpack-dev-server --open -d --config webpack/webpack.config.dev.ts"
   },
   "dependencies": {
+    "electron": "^10.1.5"
+  },
+  "devDependencies": {
+    "@types/copy-webpack-plugin": "^6.0.0",
+    "@types/node": "^14.14.2",
+    "@types/webpack": "^4.41.23",
+    "@types/webpack-dev-server": "^3.11.0",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
-    "electron": "^10.1.5",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
@@ -25,6 +31,7 @@
     "node-html-parser": "^1.2.18",
     "prettier": "^2.1.2",
     "ts-loader": "^8.0.3",
+    "ts-node": "^9.0.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.0.3",
     "wasm-pack": "^0.9.1",
