--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "devserver": "webpack serve --config webpack/webpack.config.dev.ts"
   },
   "dependencies": {
-    "electron": "^10.1.5"
+    "css-loader": "^5.0.0",
+    "electron": "^10.1.5",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "style-loader": "^2.0.0"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.0.0",
