--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "devserver": "webpack serve --config webpack/webpack.config.dev.ts"
   },
   "dependencies": {
-    "css-loader": "^5.0.0",
-    "electron": "^10.1.5",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.2",
-    "style-loader": "^2.0.0"
+    "electron": "^10.1.5"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.0.0",
@@ -26,14 +22,18 @@
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
+    "css-loader": "^5.0.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.20.2",
     "generate-package-json-webpack-plugin": "^2.0.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "loader-utils": "^2.0.0",
     "node-html-parser": "^1.2.18",
     "prettier": "^2.1.2",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.3",
     "ts-node": "^9.0.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
