--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.0.0",
+    "@types/mini-css-extract-plugin": "^1.2.0",
     "@types/node": "^14.14.2",
     "@types/webpack": "^4.41.23",
     "@types/webpack-dev-server": "^3.11.0",
@@ -31,6 +32,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "loader-utils": "^2.0.0",
+    "mini-css-extract-plugin": "^1.2.1",
     "node-html-parser": "^1.2.18",
     "prettier": "^2.1.2",
     "style-loader": "^2.0.0",
