--- a/client/explorer/Cargo.toml
+++ b/client/explorer/Cargo.toml
@@ -13,12 +13,15 @@ crate-type = ["cdylib"]
 [dependencies]
 yew = { version = "0.17", features = ["web_sys"], default-features = false  }
 wasm-bindgen = { version = "^0.2", default-features = false }
+wasm-bindgen-futures = { version = "^0.4", default-features = false }
 web-sys = { version = "^0.3", features = ["console"], default-features = false }
 wee_alloc = { version = "^0.4", default-features = false }
 console_error_panic_hook = { version = "^0.1", default-features = false }
 console_log = { version = "0.2", features = ["color"], default-features = false }
 log = { version = "0.4", default-features = false }
 
+sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
 common = { version = "^0.1", path = "../common" }
+ffxiv_parser = { version = "^0.1", path = "../../libs/ffxiv_parser" }
 
 [dev-dependencies]
