--- a/package.json
+++ b/package.json
@@ -10,39 +10,39 @@
     "devserver": "webpack serve --config webpack/webpack.config.dev.ts"
   },
   "dependencies": {
-    "electron": "^10.1.5",
-    "html-entry-loader": "git+https://github.com/dlunch/html-entry-loader.git"
+    "electron": "^10.1.5"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.0.0",
     "@types/mini-css-extract-plugin": "^1.2.0",
-    "@types/node": "^14.14.2",
-    "@types/webpack": "^4.41.23",
+    "@types/node": "^14.14.6",
+    "@types/webpack": "^4.41.24",
     "@types/webpack-dev-server": "^3.11.0",
-    "@typescript-eslint/eslint-plugin": "^4.1.1",
-    "@typescript-eslint/parser": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.1",
     "css-loader": "^5.0.0",
-    "eslint": "^7.9.0",
+    "eslint": "^7.12.1",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.20.2",
     "generate-package-json-webpack-plugin": "^2.0.0",
+    "html-entry-loader": "git+https://github.com/dlunch/html-entry-loader.git",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "loader-utils": "^2.0.0",
     "mini-css-extract-plugin": "^1.2.1",
-    "node-html-parser": "^1.2.18",
+    "node-html-parser": "^1.4.3",
     "prettier": "^2.1.2",
     "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.3",
+    "ts-loader": "^8.0.7",
     "ts-node": "^9.0.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.0.3",
+    "typescript": "^4.0.5",
     "wasm-pack": "^0.9.1",
-    "webpack": "^5.2.0",
+    "webpack": "^5.3.1",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.1.4"
