--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -52,7 +52,9 @@ jobs:
 
       - name: Install required packages
         if: matrix.os == 'windows-latest'
-        run: choco install ninja llvm
+        run: |
+          choco install ninja llvm
+          rd /s /q C:\msys2
 
       - uses: actions-rs/cargo@v1
         with:
