--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,7 +54,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           choco install ninja llvm
-          rd /s /q C:\msys2
+          Remove-Item -Recurse -Force C:\msys2
 
       - uses: actions-rs/cargo@v1
         with:
