Add docker-compose.yaml to run all things at once

--- a/.github/workflows/build_server.yaml
+++ b/.github/workflows/build_server.yaml
@@ -58,6 +58,7 @@ jobs:
             --platform ${{ matrix.targets.platform }} \
             --push \
             --tag ghcr.io/dlunch/ffxivtools_server:latest-${{ matrix.targets.tag }} \
+            --file Dockerfile.server \
             .
 
       - name: Clear
