--- a/client/common/Cargo.toml
+++ b/client/common/Cargo.toml
@@ -11,7 +11,9 @@ doctest = false
 
 [dependencies]
 async-trait = { version = "^0.1.24", default-features = false }
+wasm-bindgen = { version = "^0.2", default-features = false }
 wasm-bindgen-futures = { version = "^0.4", default-features = false }
+js-sys = { version = "^0.3", default-features = false }
 async-timer = { version = "^0.7", default-features = false }
 
 sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
