--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2018"
 default = []
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket", default-features = false  }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", default-features = false }
 futures = { version = "^0.3", default-features = false }
 itertools = { version = "^0.10", features = ["use_std"], default-features = false }
 log = { version = "^0.4", default-features = false }
 pretty_env_logger = { version = "^0.4", default-features = false }
-serde_json = {version = "^1.0", default-features = false }
+serde_json = {version = "^1.0", features = ["alloc"], default-features = false }
 serde = { version = "^1.0", default-features = false }
 
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../libs/ffxiv_parser" }
