--- a/.github/workflows/deploy_client.yaml
+++ b/.github/workflows/deploy_client.yaml
@@ -66,7 +66,7 @@ jobs:
       - name: npm run build:prod
         run: npm run build:prod
 
-      - name: Deploy to Github Pages
+      - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
