--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 default = []
 
 [dependencies]
-rocket = { git = "https://github.com/SergioBenitez/Rocket", default-features = false }
+rocket = { version = ">=0.5.0-rc.1", default-features = false }
 futures = { version = "^0.3", default-features = false }
 itertools = { version = "^0.10", features = ["use_std"], default-features = false }
 log = { version = "^0.4", default-features = false }
