--- a/client/model_viewer/Cargo.toml
+++ b/client/model_viewer/Cargo.toml
@@ -16,7 +16,7 @@ wasm-bindgen = { version = "^0.2", default-features = false }
 web-sys = { version = "^0.3", features = ["console"], default-features = false }
 wee_alloc = { version = "^0.4", default-features = false }
 console_error_panic_hook = { version = "^0.1", default-features = false }
-winit = { version = "^0.25", default-features = false }
+winit = { version = "^0.25", features = ["web-sys"], default-features = false }
 log = { version = "0.4", default-features = false }
 console_log = { version = "0.2", features = ["color"], default-features = false }
 
