--- a/package.json
+++ b/package.json
@@ -3,47 +3,40 @@
   "name": "ffxiv-tools",
   "version": "0.1.0",
   "scripts": {
-    "build:app": "webpack --config webpack/webpack.config.app.ts",
+    "build:app": "webpack --config webpack/webpack.config.app.js",
     "app": "electron app/dist",
-    "build:dev": "webpack --config webpack/webpack.config.dev.ts",
-    "build:prod": "webpack --config webpack/webpack.config.prod.ts",
-    "start": "webpack serve --config webpack/webpack.config.dev.ts"
+    "build:dev": "webpack --config webpack/webpack.config.dev.js",
+    "build:prod": "webpack --config webpack/webpack.config.prod.js",
+    "start": "webpack serve --config webpack/webpack.config.dev.js"
   },
   "dependencies": {
-    "electron": "^12.0.1"
+    "electron": "^13.1"
   },
   "devDependencies": {
-    "@types/copy-webpack-plugin": "^6.4.0",
-    "@types/mini-css-extract-plugin": "^1.2.0",
-    "@types/node": "^14.14.25",
-    "@types/webpack": "^4.41.26",
-    "@types/webpack-dev-server": "^3.11.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "@wasm-tool/wasm-pack-plugin": "^1.3.2",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^8.0.0",
-    "css-loader": "^5.0.0",
-    "eslint": "^7.19.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.20.2",
-    "generate-package-json-webpack-plugin": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14",
+    "@typescript-eslint/parser": "^4.14",
+    "@wasm-tool/wasm-pack-plugin": "^1.3",
+    "clean-webpack-plugin": "^3.0",
+    "copy-webpack-plugin": "^9.0",
+    "css-loader": "^6.2",
+    "eslint": "^7.19",
+    "eslint-config-airbnb-base": "^14.1",
+    "eslint-import-resolver-typescript": "^2.3",
+    "eslint-plugin-import": "^2.20",
+    "generate-package-json-webpack-plugin": "^2.0",
     "html-entry-loader": "git+https://github.com/dlunch/html-entry-loader.git",
-    "less": "^4.1.1",
-    "less-loader": "^8.0.0",
-    "loader-utils": "^2.0.0",
-    "mini-css-extract-plugin": "^1.3.5",
-    "prettier": "^2.1.2",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.15",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.0.5",
-    "wasm-pack": "^0.9.1",
-    "webpack": "^5.21.1",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
+    "less": "^4.1",
+    "less-loader": "^10",
+    "mini-css-extract-plugin": "^2.1",
+    "prettier": "^2.1",
+    "style-loader": "^3.2",
+    "ts-loader": "^9.2",
+    "tsconfig-paths-webpack-plugin": "^3.3",
+    "typescript": "^4.0",
+    "wasm-pack": "^0.10",
+    "webpack": "^5.21",
+    "webpack-cli": "^4.5",
+    "webpack-dev-server": "^3.11",
+    "webpack-merge": "^5.7"
   }
 }
