--- a/libs/ffxiv_parser/Cargo.toml
+++ b/libs/ffxiv_parser/Cargo.toml
@@ -24,7 +24,7 @@ sqpack = { version = "^0.1", default-features = false, git = "https://github.com
 util = { version = "^0.1", default-features = false, path = "../util" }
 
 [dev-dependencies]
-async-std = { version = "^1.9", features = ["attributes", "tokio1"] }
-pretty_env_logger = { version = "^0.4", default-features = false }
-log = { version = "^0.4", default-features = false }
-sqpack_extension = { version = "^0.1", default-features = false, path = "../sqpack_extension" }
+tokio = { version = "^1.13", features = ["full"] }
+pretty_env_logger = { version = "^0.4" }
+log = { version = "^0.4" }
+sqpack_extension = { version = "^0.1", path = "../sqpack_extension" }
