--- a/libs/sqpack_extension/Cargo.toml
+++ b/libs/sqpack_extension/Cargo.toml
@@ -9,7 +9,7 @@ doctest = false
 
 [features]
 default = []
-std = ["sqpack/std", "async-std"]
+std = ["sqpack/std", "tokio"]
 
 [dependencies]
 cfg-if = { version = "^1.0", default-features = false }
@@ -23,11 +23,11 @@ spinning_top = { version = "^0.2", default-features = false }
 sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
 util = { version = "^0.1", default-features = false, path = "../util" }
 
-async-std = { version = "^1.6", optional = true }
+tokio = { version = "^1.13", features = ["full"], optional = true }
 
 [dev-dependencies]
-pretty_env_logger = { version = "^0.4", default-features = false }
-async-std = { version = "^1.6", features = ["attributes", "alloc"], default-features = false }
+pretty_env_logger = { version = "^0.4" }
+tokio = { version = "^1.13", features = ["full"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 reqwest = { version = "^0.11", features = ["default-tls", "stream"], default-features = false }
