--- a/libs/util/Cargo.toml
+++ b/libs/util/Cargo.toml
@@ -9,10 +9,10 @@ doctest = false
 
 [features]
 default = []
-std = ["async-std"]
+std = ["tokio"]
 
 [dependencies]
 cfg-if = { version = "^1.0", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 
-async-std = { version = "^1.6", features = ["default"], default-features = false, optional = true }
+tokio = { version = "^1.13", features = ["full"], optional = true }
