--- a/tools/model_viewer_standalone/Cargo.toml
+++ b/tools/model_viewer_standalone/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 [dependencies]
 winit = { version = "^0.25", features = ["wayland", "x11"] }
-async-std = { version = "^1.9", features = ["attributes", "tokio1", "unstable"] }
+tokio = { version = "^1.13", features = ["full"] }
 futures = {version = "^0.3" }
 nalgebra = { version = "^0.29" }
 pretty_env_logger = { version = "^0.4" }
