--- a/client/model_viewer/Cargo.toml
+++ b/client/model_viewer/Cargo.toml
@@ -23,7 +23,7 @@ console_log = { version = "0.2", features = ["color"], default-features = false 
 nalgebra = { version = "^0.29" }
 hashbrown = { version = "^0.11"}
 
-renderer = { version = "^0.1", git = "https://github.com/dlunch/renderer" }
+eng = { version = "^0.1", git = "https://github.com/dlunch/eng" }
 common = { version = "^0.1", path = "../common" }
 ffxiv_model = { version = "^0.1", path = "../../libs/ffxiv_model" }
 util = { version = "^0.1", path = "../../libs/util" }
