--- a/libs/ffxiv_model/Cargo.toml
+++ b/libs/ffxiv_model/Cargo.toml
@@ -10,7 +10,7 @@ doctest = false
 [features]
 
 [dependencies]
-raw-window-handle = { version = "^0.3", default-features = false }
+raw-window-handle = { version = "^0.4", default-features = false }
 futures = { version = "^0.3", features = ["alloc"], default-features = false }
 hashbrown = { version = "^0.11", features = ["ahash", "inline-more"], default-features = false }
 spinning_top = { version = "^0.2", default-features = false }
@@ -21,4 +21,4 @@ nalgebra = { version = "^0.29", default-features = false }
 
 sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
-renderer = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/renderer" }
+eng = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/eng" }
