--- a/client/model_viewer/Cargo.toml
+++ b/client/model_viewer/Cargo.toml
@@ -17,13 +17,13 @@ wasm-bindgen-futures = { version = "^0.4", default-features = false }
 web-sys = { version = "^0.3", features = ["console"], default-features = false }
 wee_alloc = { version = "^0.4", default-features = false }
 console_error_panic_hook = { version = "^0.1", default-features = false }
-winit = { version = "^0.25", features = ["web-sys"], default-features = false }
+winit = { version = "^0.26", default-features = false }
 log = { version = "0.4", default-features = false }
 console_log = { version = "0.2", features = ["color"], default-features = false }
-nalgebra = { version = "^0.29" }
-hashbrown = { version = "^0.11"}
+nalgebra = { version = "^0.30", default-features = false }
+hashbrown = { version = "^0.12", default-features = false }
 
-eng = { version = "^0.1", git = "https://github.com/dlunch/eng" }
+eng = { version = "^0.1", git = "https://github.com/dlunch/eng", rev = "2f657c1" }
 common = { version = "^0.1", path = "../common" }
 ffxiv_model = { version = "^0.1", path = "../../libs/ffxiv_model" }
 util = { version = "^0.1", path = "../../libs/util" }
