Handle error on handler level

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,6 +17,7 @@ http = { version = "^0.2" }
 hyper = { version = "^0.14" }
 serde = { version = "^1.0" }
 serde_json = { version = "^1.0" }
+anyhow = { version = "^1.0" }
 
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../libs/ffxiv_parser" }
 sqpack_extension = { version = "^0.1", features = ["std"], path = "../libs/sqpack_extension" }
