Use only required feature on image crate

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,7 +18,7 @@ hyper = { version = "^0.14" }
 serde = { version = "^1.0" }
 serde_json = { version = "^1.0" }
 anyhow = { version = "^1.0" }
-image = { version = "^0.24" }
+image = { version = "^0.24", default-features = false, features = ["png"] }
 squish = { version = "^1.0" }
 
 ffxiv_parser = { version = "^0.1", path = "../libs/ffxiv_parser" }
