--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -11,10 +11,10 @@ COPY --from=planner /src/recipe.json recipe.json
 RUN cargo chef cook --release --recipe-path recipe.json --package server
 
 COPY . .
-RUN cargo install --path server --bins --root build
+RUN cargo build -p server --release
 
 FROM debian:stretch-slim
-COPY --from=builder /src/build/bin /server
+COPY --from=builder /src/target/release/server /server/
 
 EXPOSE 8000
 WORKDIR "/server"
