--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,7 +12,7 @@ pretty_env_logger = { version = "^0.4" }
 tokio = { version = "^1.0", features = ["full"] }
 axum = { version = "^0.5", features = ["headers"] }
 chrono = { version = "^0.4" }
-tower-http = { version = "0.3", features = ["cors", "set-header"] }
+tower-http = { version = "0.3", features = ["cors", "set-header", "catch-panic"] }
 http = { version = "^0.2" }
 hyper = { version = "^0.14" }
 serde = { version = "^1.0" }
