--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,5 +1,4 @@
-FROM dlunch/rust:1.60.0-stretch as base
-RUN cargo install cargo-chef --locked
+FROM dlunch/rust-builder:1.60.0-stretch as base
 WORKDIR /src
 
 FROM base as planner
