--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "^1.0", features = ["full"] }
 axum = { version = "^0.5", features = ["headers"] }
 chrono = { version = "^0.4" }
 tower-http = { version = "0.3", features = ["cors", "set-header", "catch-panic"] }
+tower = { version = "^0.4" }
 http = { version = "^0.2" }
 hyper = { version = "^0.14" }
 serde = { version = "^1.0" }
