--- a/libs/ffxiv_parser/Cargo.toml
+++ b/libs/ffxiv_parser/Cargo.toml
@@ -16,9 +16,9 @@ futures = { version = "^0.3", features = ["alloc"], default-features = false }
 serde = { version = "^1.0", features = ["derive", "alloc"], default-features = false }
 serde_repr = { version = "^0.1", default-features = false }
 hashbrown = { version = "^0.12", features = ["ahash", "inline-more"], default-features = false }
-phf = { version = "^0.10", features = ["macros"], default-features = false }
+phf = { version = "^0.11", features = ["macros"], default-features = false }
 log = { version = "^0.4", default-features = false }
-nalgebra = { version = "^0.29", default-features = false }
+glam = { version = "^0.21", features = ["libm"], default-features = false }
 squish = { version = "^1.0" }
 
 sqpack = { version = "^0.1", default-features = false, git = "https://github.com/dlunch/sqpack" }
