Update web packages

--- a/client/translation_compare/Cargo.toml
+++ b/client/translation_compare/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["cdylib"]
 [features]
 
 [dependencies]
-yew = { version = "0.18", features = ["web_sys"], default-features = false  }
+yew = { version = "0.19", default-features = false }
 wasm-bindgen = { version = "^0.2", default-features = false }
 wasm-bindgen-futures = { version = "^0.4", default-features = false }
 web-sys = { version = "^0.3", default-features = false }
