--- a/package.json
+++ b/package.json
@@ -10,33 +10,34 @@
     "start": "webpack serve --config webpack/webpack.config.dev.js"
   },
   "dependencies": {
-    "electron": "^13.1"
+    "electron": "^6.1.12",
+    "file-loader": "^6.2.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.14",
-    "@typescript-eslint/parser": "^4.14",
-    "@wasm-tool/wasm-pack-plugin": "^1.3",
-    "clean-webpack-plugin": "^3.0",
-    "copy-webpack-plugin": "^9.0",
-    "css-loader": "^6.2",
-    "eslint": "^7.19",
-    "eslint-config-airbnb-base": "^14.1",
-    "eslint-import-resolver-typescript": "^2.3",
-    "eslint-plugin-import": "^2.20",
-    "generate-package-json-webpack-plugin": "^2.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "@wasm-tool/wasm-pack-plugin": "^1.6.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.23.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-typescript": "^3.5.1",
+    "eslint-plugin-import": "^2.26.0",
+    "generate-package-json-webpack-plugin": "^2.6.0",
     "html-entry-loader": "git+https://github.com/dlunch/html-entry-loader.git",
-    "less": "^4.1",
-    "less-loader": "^10",
-    "mini-css-extract-plugin": "^2.1",
-    "prettier": "^2.1",
-    "style-loader": "^3.2",
-    "ts-loader": "^9.2",
-    "tsconfig-paths-webpack-plugin": "^3.3",
-    "typescript": "^4.0",
-    "wasm-pack": "^0.10",
-    "webpack": "^5.21",
-    "webpack-cli": "^4.5",
-    "webpack-dev-server": "^3.11",
-    "webpack-merge": "^5.7"
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "prettier": "^2.7.1",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.4.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "typescript": "^4.8.3",
+    "wasm-pack": "^0.10.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-merge": "^5.8.0"
   }
 }
