--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "electron": "^20.2.0",
-    "file-loader": "^6.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.38.0",
@@ -24,6 +23,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
+    "file-loader": "^6.2.0",
     "generate-package-json-webpack-plugin": "^2.6.0",
     "html-entry-loader": "git+https://github.com/dlunch/html-entry-loader.git",
     "less": "^4.1.3",
