--- a/client/model_viewer/Cargo.toml
+++ b/client/model_viewer/Cargo.toml
@@ -11,7 +11,8 @@ crate-type = ["cdylib"]
 [features]
 
 [dependencies]
-yew = { version = "0.19", default-features = false }
+yew = { version = "^0.19", default-features = false }
+fern = { version = "^0.6", features = ["colored"] }
 wasm-bindgen = { version = "^0.2", default-features = false }
 wasm-bindgen-futures = { version = "^0.4", default-features = false }
 web-sys = { version = "^0.3", features = ["console"], default-features = false }
