--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -49,6 +49,10 @@ jobs:
           choco install ninja llvm
           Remove-Item -Recurse -Force C:\msys64
 
+      - name: Install required packages
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt update && sudo apt install -y libwayland-dev libxkbcommon-dev
+
       - uses: actions-rs/cargo@v1
         with:
           command: build
