--- a/libs/sqpack_extension/Cargo.toml
+++ b/libs/sqpack_extension/Cargo.toml
@@ -10,6 +10,7 @@ doctest = false
 [features]
 default = []
 std = ["sqpack/std", "tokio"]
+test_local = []
 
 [dependencies]
 cfg-if = { version = "^1.0", default-features = false }
